--- a/portfolio.html
+++ b/portfolio.html
@@ -3,10 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- bootstrap -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <!-- css -->
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/portfolio.css">
+    <!-- fontawesome -->
+    <script src="https://kit.fontawesome.com/9e1bf99b51.js" crossorigin="anonymous"></script>
     <title>Portfolio</title>
 </head>
+<script defer src="/portfolio.js"></script>
 <body>
     <!---------- header ------------->
     <header>
@@ -16,7 +22,7 @@
     <!---------- header ------------->
     <!---------- main ------------->
     <main>
-        <section>
+        <section class="section_1">
             <div class="section_left">
                 <h2>About me</h2>
                 <p>bbbbbbbb bbbbbb bbbbbbbbbbbbbb bbbbbbbbbbbbbbbbbb bbbbbb</p>
@@ -41,13 +47,73 @@
                 </li>
             </ul>
         </nav>
-    </main>
-
+        <section class="section_2">
+            <div>
+                <h2>SUMMARY</h2>
+                <p>bbbbbbbb bbbbbb bbbbbbbbbbbbbb bbbbbbbbbbbbbbbbbb bbbbbb</p>
+            </div>
+        </section>
+        <section class="slider">
+            <div class="slides"  id="d1">
+                <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active nav1">
+                             <img src="img/AD634E3A-6F57-4F6C-8635-C6EE1B65795D.jpeg">
+                        </div>
+                        <div class="carousel-item">
+                             <img src="nav2.jpg">
+                        </div>
+                        <div class="carousel-item">
+                             <img src="nav3.jpg">
+                        </div>
+                        <div class="carousel-item">
+                             <img src="nav4.jpeg">
+                        </div>
+                        <div class="carousel-item">
+                             <img src="nav5.jpg">
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Next</span>
+                    </a>
+                  </div>
+                </div>
+        </section>
+        <section class="section_3">
+            <div class="margin-left">
+                <ul class="tab-nav">
+                    <li><a href="#tab01" class="active">WORK EXPERIENCE</a></li>
+                    <li><a href="#tab02">EDUCATION</a></li>
+                </ul>
+                <div class="clearfix"></div>
+                <div class="tab-content">
+                    <div id="tab01" class="active">
+                        HTMLとは HTMLとは、Hyper Text Markup Language
+                        （ハイパーテキスト・マークアップ・ランゲージ）の略で、
+                        Webページを作るための最も基本的なマークアップ言語のひとつです。
+                        普段、私たちがブラウザで観ているWebページのほとんどが、
+                        HTMLで作られています。
+                    </div>
+                    <div id="tab02">
+                        CSS（Cascading Style Sheets、カスケーディング・スタイル・シート）とは、
+                        ウェブページのスタイルを指定するための言語です。
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main> 
     <!---------- main ------------->
     <!---------- footer ------------->
-
-
+    <footer>
+        <div>
+            <p>Produce by Yuko Robinson</p>
+        </div>
+    </footer>
     <!---------- footer ------------->
-<script defer src="portfolio.js"></script>
 </body>
 </html>
