--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,8 @@
     <script src="https://kit.fontawesome.com/9e1bf99b51.js" crossorigin="anonymous"></script>
     <title>Portfolio</title>
 </head>
-<script defer src="/portfolio.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script defer src="portfolio.js"></script>
 <body>
     <!---------- header ------------->
     <header>
@@ -110,7 +111,7 @@
     <!---------- main ------------->
     <!---------- footer ------------->
     <footer>
-        <div>
+        <div class="footer_nav">
             <p>Produce by Yuko Robinson</p>
         </div>
     </footer>
