--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
     <main>
         <section class="section_1">
             <div class="section_left">
-                <h2>About me</h2>
+                <h2>INFORMATION</h2>
                 <ul>
                     <li><span>NAME :</span> Yuko Robinson</li>
                     <li><span>BIRTHDAY :</span> November 13th</li>
@@ -46,7 +46,7 @@
         <nav>
             <ul>
                 <li>
-                    <a href="#">SUMMARY</a>
+                    <a href="#">ABOUT ME</a>
                 </li>
                 <li>
                     <a href="#">PHOTOS</a>
@@ -61,12 +61,14 @@
         </nav>
         <section class="section_2">
             <div>
-                <h2>SUMMARY</h2>
+                <h2>ABOUT ME</h2>
                 <div class="summary_text">
-                    <p>I'm born from small island "Okinawa".</p>
-                    <p>I grow up with beautiful ocean, nature and...</p>
-                    <p class="summary_love hide">LOVE</p>
-                    <p>I want to share </p>
+                    <p>I'm born from a small island "Okinawa".</p>
+                    <p>I grew up with beautiful ocean, nature and...</p>
+                    <p class="summary_love hide">Big love.</p>
+                    <p>My dream is sharing our island and culture with people all around the world</p>
+                    <p class="summary_love">with my photos!</p>
+                    <p>And I want to give everyone all my love what I learned from my life.</p>
                 </div>
             </div>
         </section>
@@ -113,15 +115,14 @@
                 <div class="clearfix"></div>
                 <div class="tab-content">
                     <div id="tab01" class="active">
-                        HTMLとは HTMLとは、Hyper Text Markup Language
-                        （ハイパーテキスト・マークアップ・ランゲージ）の略で、
-                        Webページを作るための最も基本的なマークアップ言語のひとつです。
-                        普段、私たちがブラウザで観ているWebページのほとんどが、
-                        HTMLで作られています。
+                        <ul>
+                            <li>・WILLTEC Co.,Ltd.(February 2016 - February 2019)</li>
+                        </ul>
                     </div>
                     <div id="tab02">
-                        CSS（Cascading Style Sheets、カスケーディング・スタイル・シート）とは、
-                        ウェブページのスタイルを指定するための言語です。
+                        <ul>
+                            <li>・NexSeed Okinawa (2020)</li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -131,7 +132,7 @@
     <!---------- footer ------------->
     <footer>
         <div class="footer_text">
-            <p class="footer_fade hide">bbbbbbbb bbbbbb bbbbbbbbbbbbbb bbbbbbbbbbbbbbbbbb bbbbbb<br>oooooooooooooooooooooooooooooooooo<br>oooooooooooooooooooooooooooooo<br>ssssssssssssssssssssssssssss</p>
+            <p class="footer_fade hide">Thank you for watching!</p>
         </div>
         <div class="footer_nav">
             <p>Produce by Yuko Robinson</p>
