--- a/portfolio.html
+++ b/portfolio.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- css -->
     <link rel="stylesheet" href="css/reset.css">
     <!-- CSS only -->
@@ -132,7 +133,14 @@
     <!---------- footer ------------->
     <footer>
         <div class="footer_text">
-            <p class="footer_fade hide">Thank you for watching!</p>
+            <p class="footer_fade hide">
+                    Directed by Yuko
+               <br>Produced by Yuko
+               <br>Photography by Yuko
+               <br>Edited by Yuko
+               <br>Special thanks : Moepi, Megurin, Ms.Eringo
+                <p class="footer_fade hide thanks">Thank you very much!</p>
+            </p>
         </div>
         <div class="footer_nav">
             <p>Produce by Yuko Robinson</p>
