--- a/portfolio.html
+++ b/portfolio.html
@@ -26,6 +26,25 @@
                 <li><i class="fas fa-fire-alt"></i></li>
             </ul>
         </div>
+    <!-- humburger -->
+       <div id="navArea">
+            <nav class="humburger">
+                <div class="inner">
+                    <ul>
+                       <li><a href="#">ABOUT ME</a></li>
+                       <li><a href="#">PHOTOS</a></li>
+                       <li><a href="#">WORK EXPERIENCE</a></li>
+                       <li><a href="#">EDUCATION</a></li>
+                    </ul>
+                </div>
+            </nav>
+            <div class="toggle_btn">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+        <div id="mask"></div>
+    </div>
     </header>
     <!---------- header ------------->
     <!---------- main ------------->
@@ -44,7 +63,7 @@
                 <img class="section_img" src="img/0B358A9B-3CEE-4034-98BB-FB832FC6C0E4_1_105_c.jpeg" alt="">
             </div>
         </section>
-        <nav>
+        <nav class="nav_pc">
             <ul>
                 <li>
                     <a href="#">ABOUT ME</a>
